change style declarations | put a div container around logo and links, put a div container around notifcations and profile image, aligned both containers center and spacebetween on the main axis. Gave both various paddings and gaps to ensure an even distrubtion from the edge of screen and each other - to satisfy conditions of TOP flex assignment 3 for foundations curric

--- a/flex/03-flex-header-2/style.css
+++ b/flex/03-flex-header-2/style.css
@@ -12,6 +12,33 @@ body {
   background: white;
   border-bottom: 1px solid #ddd;
   box-shadow: 0 0 8px rgba(0,0,0,.1);
+  display:flex;
+  justify-content: space-between;
+  padding:8px
+
+}
+
+.left {
+  display: flex;
+  align-items: center;
+  gap: 16px;
+  
+}
+
+.right {
+  display: flex;
+  align-items: center;
+  gap: 20px;
+  padding: 0px 10px
+}
+
+ul{
+  
+  display: flex;
+  gap: 10px;
+  margin: 0;
+  padding:0px;
+  
 }
 
 .profile-image {
